<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="191dp"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/app_name"/>

        <EditText
            android:id="@+id/usenameEditText"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/user_text"
            android:inputType="text" />

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/loginButton"
            style="@style/PrincipalButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/login_text" />

        <Button
            style="@style/SecondaryButtonStyle"
            android:id="@+id/googleLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:text="@string/login_google_text"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/registerLinkTextView"
            style="@style/LinkStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>