<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">


        <TextView
            style="@style/TitleTextStyle"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_title_text"
            tools:layout_editor_absoluteX="117dp"
            tools:layout_editor_absoluteY="73dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/adressEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/adress_text"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="128dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp">
            <TextView
                style="@style/NormalTextStyle"
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_dishes"
                tools:layout_editor_absoluteX="117dp"
                tools:layout_editor_absoluteY="73dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                style="EditTextStyle"
                android:id="@+id/totalDishesEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="1"
                tools:layout_editor_absoluteX="62dp"
                tools:layout_editor_absoluteY="128dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <TextView
                style="@style/NormalTextStyle"
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aprox_price_text"
                tools:layout_editor_absoluteX="117dp"
                tools:layout_editor_absoluteY="73dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                style="@style/NormalTextStyle"
                android:id="@+id/aproxPriceOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$xxx.xxx.xx"
                tools:layout_editor_absoluteX="117dp"
                tools:layout_editor_absoluteY="73dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <TextView
                style="@style/NormalTextStyle"
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/domicile_text"
                tools:layout_editor_absoluteX="117dp"
                tools:layout_editor_absoluteY="73dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                style="@style/NormalTextStyle"
                android:id="@+id/domicileTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$xxx.xxx.xx"
                tools:layout_editor_absoluteX="117dp"
                tools:layout_editor_absoluteY="73dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="#000000"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="352dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <TextView
                style="@style/NormalTextStyle"
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_text"
                tools:layout_editor_absoluteX="117dp"
                tools:layout_editor_absoluteY="73dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                style="@style/NormalTextStyle"
                android:id="@+id/totalTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$xxx.xxx.xx"
                tools:layout_editor_absoluteX="117dp"
                tools:layout_editor_absoluteY="73dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

        <Button
            style="@style/ThirdButtonStyle"
            android:id="@+id/orderConfirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_confirm_text"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="407dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>

        <Button
            style="@style/CancelButtonStyle"
            android:id="@+id/orderCancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_text"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="407dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>




</android.support.constraint.ConstraintLayout>