<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DishDetailActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                style="@style/TitleTextStyle"
                android:id="@+id/dishNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dish Name"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"/>

            <ImageView
                android:id="@+id/dishImage"
                android:layout_width="194dp"
                android:layout_height="194dp"
                app:srcCompat="@drawable/dishdefault"
                android:contentDescription="@string/dish_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp">
                <TextView
                    style="@style/NormalTextStyle"
                    android:id="@+id/TextView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients_text"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="2dp"
                    android:gravity="left"/>
                <TextView
                    style="@style/SimpleTextStyle"
                    android:id="@+id/ingredientsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ingredients"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="2dp"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp">
                <TextView
                    style="@style/NormalTextStyle"
                    android:id="@+id/TextView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_text"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"/>
                <TextView
                    style="@style/SimpleTextStyle"
                    android:id="@+id/timeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="xx minutos"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp">
                <TextView
                    style="@style/NormalTextStyle"
                    android:id="@+id/TextView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/difficulty_text"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"/>
                <TextView
                    style="@style/SimpleTextStyle"
                    android:id="@+id/dificultTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="difficulty"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp">
                <TextView
                    style="@style/NormalTextStyle"
                    android:id="@+id/TextView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step_text"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:gravity="left"/>
                <TextView
                    style="@style/SimpleTextStyle"
                    android:id="@+id/stepsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="steps"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp">
                <TextView
                    style="@style/NormalTextStyle"
                    android:id="@+id/TextView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/video_text"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="2dp"
                    android:gravity="left"/>
                <ImageView
                    android:id="@+id/dishVideo"
                    android:layout_width="194dp"
                    android:layout_height="180dp"
                    app:srcCompat="@drawable/video"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp">
                <TextView
                    style="@style/NormalTextStyle"
                    android:id="@+id/TextView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aprox_price_text"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"/>
                <TextView
                    style="@style/SimpleTextStyle"
                    android:id="@+id/aproxValueTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$XXX.XXX.XX"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"/>
            </LinearLayout>
            <Button
                style="@style/ThirdButtonStyle"
                android:id="@+id/ingredientsConfirmButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ask_ingredients_text"
                tools:layout_editor_absoluteX="148dp"
                tools:layout_editor_absoluteY="407dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/registerLinkTextView"
                style="@style/LinkStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_comments_text"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:textStyle="bold" />



        </LinearLayout>



    </ScrollView>


</android.support.constraint.ConstraintLayout>